src/grammar/LuppoloParser.py
# Generated from Luppolo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuppoloParser ( Parser ):

    grammarFileName = "Luppolo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "','", "'('", "')'", "'{'", "'}'", 
                     "'true'", "'false'", "'!'", "'and'", "'or'", "'<='", 
                     "'<'", "'=='", "'>'", "'>='", "'+'", "'-'", "'*'", 
                     "'/'", "'^'", "'else'", "'foreach'", "'if'", "'in'", 
                     "'repeat'", "'return'", "'while'" ]

    symbolicNames = [ "<INVALID>", "NAT", "SYM", "ID", "BOOLEAN", "ASSIGN", 
                      "COMMA", "LROUND", "RROUND", "LCURLY", "RCURLY", "TRUE", 
                      "FALSE", "NOT", "AND", "OR", "LTEQ", "LT", "EQ", "GT", 
                      "GTEQ", "PLUS", "MINUS", "MUL", "DIV", "POW", "ELSE", 
                      "FOREACH", "IF", "IN", "REPEAT", "RETURN", "WHILE", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_function = 1
    RULE_block = 2
    RULE_instruction = 3
    RULE_expression = 4
    RULE_condition = 5
    RULE_call = 6

    ruleNames =  [ "program", "function", "block", "instruction", "expression", 
                   "condition", "call" ]

    EOF = Token.EOF
    NAT=1
    SYM=2
    ID=3
    BOOLEAN=4
    ASSIGN=5
    COMMA=6
    LROUND=7
    RROUND=8
    LCURLY=9
    RCURLY=10
    TRUE=11
    FALSE=12
    NOT=13
    AND=14
    OR=15
    LTEQ=16
    LT=17
    EQ=18
    GT=19
    GTEQ=20
    PLUS=21
    MINUS=22
    MUL=23
    DIV=24
    POW=25
    ELSE=26
    FOREACH=27
    IF=28
    IN=29
    REPEAT=30
    RETURN=31
    WHILE=32
    WS=33
    LINE_COMMENT=34
    BLOCK_COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LuppoloParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.FunctionContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.FunctionContext,i)


        def getRuleIndex(self):
            return LuppoloParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LuppoloParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.function()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

            self.state = 19
            self.match(LuppoloParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LuppoloParser.ID)
            else:
                return self.getToken(LuppoloParser.ID, i)

        def LROUND(self):
            return self.getToken(LuppoloParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(LuppoloParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(LuppoloParser.BlockContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LuppoloParser.COMMA)
            else:
                return self.getToken(LuppoloParser.COMMA, i)

        def getRuleIndex(self):
            return LuppoloParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = LuppoloParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(LuppoloParser.ID)
            self.state = 22
            self.match(LuppoloParser.LROUND)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 23
                self.match(LuppoloParser.ID)
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 24
                    self.match(LuppoloParser.COMMA)
                    self.state = 25
                    self.match(LuppoloParser.ID)
                    self.state = 30
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 33
            self.match(LuppoloParser.RROUND)
            self.state = 34
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(LuppoloParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(LuppoloParser.RCURLY, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.InstructionContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.InstructionContext,i)


        def getRuleIndex(self):
            return LuppoloParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuppoloParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(LuppoloParser.LCURLY)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7918845960) != 0):
                self.state = 37
                self.instruction()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(LuppoloParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuppoloParser.RULE_instruction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RepeatInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPEAT(self):
            return self.getToken(LuppoloParser.REPEAT, 0)
        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(LuppoloParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatInstruction" ):
                listener.enterRepeatInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatInstruction" ):
                listener.exitRepeatInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatInstruction" ):
                return visitor.visitRepeatInstruction(self)
            else:
                return visitor.visitChildren(self)


    class ReturnInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LuppoloParser.RETURN, 0)
        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnInstruction" ):
                listener.enterReturnInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnInstruction" ):
                listener.exitReturnInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstruction" ):
                return visitor.visitReturnInstruction(self)
            else:
                return visitor.visitChildren(self)


    class WhileInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(LuppoloParser.WHILE, 0)
        def condition(self):
            return self.getTypedRuleContext(LuppoloParser.ConditionContext,0)

        def block(self):
            return self.getTypedRuleContext(LuppoloParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileInstruction" ):
                listener.enterWhileInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileInstruction" ):
                listener.exitWhileInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileInstruction" ):
                return visitor.visitWhileInstruction(self)
            else:
                return visitor.visitChildren(self)


    class IfInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(LuppoloParser.IF, 0)
        def condition(self):
            return self.getTypedRuleContext(LuppoloParser.ConditionContext,0)

        def block(self):
            return self.getTypedRuleContext(LuppoloParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfInstruction" ):
                listener.enterIfInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfInstruction" ):
                listener.exitIfInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfInstruction" ):
                return visitor.visitIfInstruction(self)
            else:
                return visitor.visitChildren(self)


    class ForeachInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOREACH(self):
            return self.getToken(LuppoloParser.FOREACH, 0)
        def ID(self):
            return self.getToken(LuppoloParser.ID, 0)
        def IN(self):
            return self.getToken(LuppoloParser.IN, 0)
        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(LuppoloParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForeachInstruction" ):
                listener.enterForeachInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForeachInstruction" ):
                listener.exitForeachInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachInstruction" ):
                return visitor.visitForeachInstruction(self)
            else:
                return visitor.visitChildren(self)


    class IfElseInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(LuppoloParser.IF, 0)
        def condition(self):
            return self.getTypedRuleContext(LuppoloParser.ConditionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.BlockContext,i)

        def ELSE(self):
            return self.getToken(LuppoloParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseInstruction" ):
                listener.enterIfElseInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseInstruction" ):
                listener.exitIfElseInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseInstruction" ):
                return visitor.visitIfElseInstruction(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationInstructionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LuppoloParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(LuppoloParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationInstruction" ):
                listener.enterDeclarationInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationInstruction" ):
                listener.exitDeclarationInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationInstruction" ):
                return visitor.visitDeclarationInstruction(self)
            else:
                return visitor.visitChildren(self)



    def instruction(self):

        localctx = LuppoloParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = LuppoloParser.DeclarationInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(LuppoloParser.ID)
                self.state = 46
                self.match(LuppoloParser.ASSIGN)
                self.state = 47
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = LuppoloParser.ForeachInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(LuppoloParser.FOREACH)
                self.state = 49
                self.match(LuppoloParser.ID)
                self.state = 50
                self.match(LuppoloParser.IN)
                self.state = 51
                self.expression(0)
                self.state = 52
                self.block()
                pass

            elif la_ == 3:
                localctx = LuppoloParser.IfElseInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.match(LuppoloParser.IF)
                self.state = 55
                self.condition(0)
                self.state = 56
                self.block()
                self.state = 57
                self.match(LuppoloParser.ELSE)
                self.state = 58
                self.block()
                pass

            elif la_ == 4:
                localctx = LuppoloParser.IfInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.match(LuppoloParser.IF)
                self.state = 61
                self.condition(0)
                self.state = 62
                self.block()
                pass

            elif la_ == 5:
                localctx = LuppoloParser.RepeatInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.match(LuppoloParser.REPEAT)
                self.state = 65
                self.expression(0)
                self.state = 66
                self.block()
                pass

            elif la_ == 6:
                localctx = LuppoloParser.ReturnInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.match(LuppoloParser.RETURN)
                self.state = 69
                self.expression(0)
                pass

            elif la_ == 7:
                localctx = LuppoloParser.WhileInstructionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.match(LuppoloParser.WHILE)
                self.state = 71
                self.condition(0)
                self.state = 72
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuppoloParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NatContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAT(self):
            return self.getToken(LuppoloParser.NAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNat" ):
                listener.enterNat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNat" ):
                listener.exitNat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNat" ):
                return visitor.visitNat(self)
            else:
                return visitor.visitChildren(self)


    class CallExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def call(self):
            return self.getTypedRuleContext(LuppoloParser.CallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallExpression" ):
                listener.enterCallExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallExpression" ):
                listener.exitCallExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallExpression" ):
                return visitor.visitCallExpression(self)
            else:
                return visitor.visitChildren(self)


    class SymContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYM(self):
            return self.getToken(LuppoloParser.SYM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSym" ):
                listener.enterSym(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSym" ):
                listener.exitSym(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSym" ):
                return visitor.visitSym(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionParensContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LROUND(self):
            return self.getToken(LuppoloParser.LROUND, 0)
        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)

        def RROUND(self):
            return self.getToken(LuppoloParser.RROUND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionParens" ):
                listener.enterExpressionParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionParens" ):
                listener.exitExpressionParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionParens" ):
                return visitor.visitExpressionParens(self)
            else:
                return visitor.visitChildren(self)


    class PowContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.ExpressionContext,i)

        def POW(self):
            return self.getToken(LuppoloParser.POW, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPow" ):
                listener.enterPow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPow" ):
                listener.exitPow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPow" ):
                return visitor.visitPow(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(LuppoloParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(LuppoloParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class UnaryContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(LuppoloParser.ExpressionContext,0)

        def PLUS(self):
            return self.getToken(LuppoloParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(LuppoloParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary" ):
                listener.enterUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary" ):
                listener.exitUnary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary" ):
                return visitor.visitUnary(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LuppoloParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuppoloParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuppoloParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LuppoloParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(LuppoloParser.MUL, 0)
        def DIV(self):
            return self.getToken(LuppoloParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LuppoloParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = LuppoloParser.UnaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 77
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 78
                self.expression(7)
                pass

            elif la_ == 2:
                localctx = LuppoloParser.CallExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.call()
                pass

            elif la_ == 3:
                localctx = LuppoloParser.NatContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 80
                self.match(LuppoloParser.NAT)
                pass

            elif la_ == 4:
                localctx = LuppoloParser.SymContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 81
                self.match(LuppoloParser.SYM)
                pass

            elif la_ == 5:
                localctx = LuppoloParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self.match(LuppoloParser.ID)
                pass

            elif la_ == 6:
                localctx = LuppoloParser.ExpressionParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.match(LuppoloParser.LROUND)
                self.state = 84
                self.expression(0)
                self.state = 85
                self.match(LuppoloParser.RROUND)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = LuppoloParser.PowContext(self, LuppoloParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 90
                        localctx.op = self.match(LuppoloParser.POW)
                        self.state = 91
                        self.expression(9)
                        pass

                    elif la_ == 2:
                        localctx = LuppoloParser.MulDivContext(self, LuppoloParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 93
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==23 or _la==24):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.expression(9)
                        pass

                    elif la_ == 3:
                        localctx = LuppoloParser.AddSubContext(self, LuppoloParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 96
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==21 or _la==22):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 97
                        self.expression(7)
                        pass
